# kitchen_sink_full_of_cravings

./: .cruft.json  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
src/kitchen_sink_full_of_cravings/: __init__.py  kitchen_sink_full_of_cravings.py
tests/: test_kitchen_sink_full_of_cravings.py
